added testing for one sided kbf

--- a/one_side_kbf/Makefile
+++ b/one_side_kbf/Makefile
@@ -4,6 +4,8 @@ PROJ_DIR = /mnt/Jupiter/FAKS/Diplomski/3_semestar/Bioinformarika/libbloom/one_si
 INC_DIR = $(PROJ_DIR)/inc
 SRC_DIR = $(PROJ_DIR)/src
 
+TEST_FILE_DIR = /mnt/Jupiter/FAKS/Diplomski/3_semestar/Bioinformarika/genom
+
 CFLAGS = -Wall -Wextra -c -g
 INC = -I$(INC_DIR)
 
@@ -30,4 +32,6 @@ $(SRC_DIR)/%.o : $(SRC_DIR)/%.c
 clean:
 	rm -f $(SRC_DIR)/*.o
 	rm -f test_prog.o
+	rm -f $(TEST_FILE_DIR)/mutate.txt
+	rm -f $(TEST_FILE_DIR)/nonmutate.txt
 	rm -f test
